# FinalDigitalCoach

./: .gitattributes  .gitignore  README.md  docker-compose.yml  package.json  webscraper.py
Web Scraping/: webscraper.py
digital-coach-app/: .firebaserc  README.md  package-lock.json  package.json
digital-coach-app/components/: test.tsx
digital-coach-app/components/layouts/: layout.module.scss
digital-coach-app/components/molecules/modals/: AddQuestionToSetModal.tsx
digital-coach-app/components/organisms/: InteractiveAvatar.tsx  NavBar.tsx  Navbar.module.scss  OpenAssistant.tsx  PastInterviewAnswerPage.module.scss  PastInterviewQuestionTable.module.scss  ResumeInterviewTable.module.scss  Transcript.module.scss  Transcript.tsx
digital-coach-app/components/organisms/AddQuestionsCard/: AddQuestionsForm.tsx  SelectedQuestionsList.tsx
digital-coach-app/components/organisms/BasicInfoCard/: BasicInfoForm.tsx
digital-coach-app/components/organisms/Forum/: EditThreadForm.tsx  ForumApp.tsx  NewThreadForm.tsx  ThreadList.tsx  forumapi  forumapi.ts  forumapi.tsx
digital-coach-app/components/organisms/SelectQuestionSetCard/: SelectedQuestionsList.tsx
digital-coach-app/data/: questions.ts
digital-coach-app/functions/: package-lock.json  package.json  tsconfig.json
digital-coach-app/functions/src/: index.ts
digital-coach-app/lib/answer/: useGetAnswerByUserId.ts  useGetSubmission.ts
digital-coach-app/lib/auth/: AuthContext.tsx  AuthContextProvider.tsx  AuthGuard.tsx  AuthService.ts
digital-coach-app/lib/firebase/: FirebaseService.ts  firebase.config.ts
digital-coach-app/lib/interview/: InterviewService.ts  useFetchInterviewDetails.ts  useFetchUserInterviews.ts  useGetInterviewName.ts  usePastInterviewQuery.ts  useResumeInterviewQuery.ts
digital-coach-app/lib/interviewQuestion/: useGetInterviewQuestionsTableData.ts  useGetUserAverageScore.ts
digital-coach-app/lib/question/: QuestionService.ts  models.ts
digital-coach-app/lib/questionSets/: QuestionSetsService.ts  useGetFeaturedQuestionSets.ts
digital-coach-app/lib/user/: UserService.ts
digital-coach-app/pages/: _app.tsx  browsequestions.tsx  connections.tsx  index.tsx  natural-conversation.tsx  naturalconversation.tsx  profile.tsx  progress.tsx  storytelling.tsx  video.tsx
digital-coach-app/pages/api/: seed.ts  test_questions.ts
digital-coach-app/pages/auth/: login.tsx  register.tsx  signup.tsx
digital-coach-app/styles/: Home.module.scss  LoginPage.module.scss  NaturalConversationPage.module.scss  RegisterPage.module.scss  StartInterviewPage.module.scss  StorytellingPage.module.scss  VideoPage.module.scss
ml-api/: .gitignore  Dockerfile  Pipfile  README.md  app.py  db_monitor.py  pyproject.toml  requirements.txt  test.py  test_app.py  test_sample_video.py  test_star.py
ml-api/helpers/: av_processing.py  download_url.py  score.py
ml-api/models/: BigFiveScores.py  StarMethod.py  label_mapping.json  model_tokenizer.pkl  models.py  sentimentFeedback.py  tfidf_model.pkl
ml-api/server/: db_monitor.py  main.py
ml/text/: text_model.pkl
mlapi/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  nginx.conf  password.txt  pyproject.toml  requirements.txt
mlapi/backend/: .dockerignore  Dockerfile  __init__.py  data.csv  main.py  requirements.txt  setup.py
mlapi/backend/redisStore/: __init__.py  monitor.py  myConnection.py  queue.py  worker.py
mlapi/backend/server/: __init__.py  app.py  routes.py
mlapi/backend/server/templates/: index.html  record.html
mlapi/backend/src/: __init__.py  db_monitor.py  routes.py
mlapi/backend/src/templates/: index.html
mlapi/backend/tasks/: __init__.py  score.py  starPredictions.py  types.py  videoProcess.py  worker.py
mlapi/backend/tasks/helpers/: __init__.py  av_processing.py  competency_analysis.py  download_url.py  file_management.py  score_helpers.py  statistics.py  text_processor.py  text_structure_ml.py
mlapi/backend/tasks/models/: __init__.py  model.py  sentimentFeedback.py
mlapi/backend/tests/: __init__.py  test.json  test_BigFiveScores.py  test_processing.py  test_starPredictions.py
mlapi/backend/utils/: __init__.py  env_loader.py  filetools.py  logger_config.py
mlapi/changes-docs/: feedback_methodology.md  text_structure.md
mlapi/redisStore/: __init__.py  monitor.py  myconnection.py  queue.py  worker.py
mlapi/routes/: __init__.py  audio_analysis.py  big_five.py  create_answer.py  facial_analysis.py  jobs.py  star_feedback.py
mlapi/schemas/: create_answer.py  jobs.py
mlapi/scripts/: buildnrun  deploy.sh  firewall.sh  load
mlapi/tasks/: assemblyai_api.py  bigfivescore.py  create_answer_task.py  detect_emotions.py  starscores.py
mlapi/tasks/helpers/: __init__.py  analyze_text_structure_ml.py  av_processing.py  competency_feedback.py  create_answer_helpers.py  text_preprocessing.py
mlapi/tests/: example_response.json  test_audio_analysis.py  test_big_five.py  test_create_answer.py  test_facial_analysis.py  test_star_feedback.py
mlapi/utils/: logger_config.py
