[project]
name = "ml-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==0.15.0 ; python_full_version == '3.10.*'",
    "accelerate==0.28.0 ; python_full_version == '3.10.*'",
    "appnope==0.1.2 ; python_full_version == '3.10.*'",
    "astroid==2.9.3 ; python_full_version == '3.10.*'",
    "asttokens==2.0.5 ; python_full_version == '3.10.*'",
    "astunparse==1.6.3 ; python_full_version == '3.10.*'",
    "async-timeout==5.0.1 ; python_full_version == '3.10.*'",
    "backcall==0.2.0 ; python_full_version == '3.10.*'",
    "black==22.3.0 ; python_full_version == '3.10.*'",
    "cachetools==5.0.0 ; python_full_version == '3.10.*'",
    "certifi==2021.10.8 ; python_full_version == '3.10.*'",
    "cffi==1.17.1 ; python_full_version == '3.10.*' and implementation_name == 'pypy'",
    "charset-normalizer==2.0.12 ; python_full_version == '3.10.*'",
    "click==8.1.8 ; python_full_version == '3.10.*'",
    "colorama==0.4.6 ; python_full_version == '3.10.*' and sys_platform == 'win32'",
    "cycler==0.11.0 ; python_full_version == '3.10.*'",
    "debugpy==1.5.1 ; python_full_version == '3.10.*'",
    "decorator==4.4.2 ; python_full_version == '3.10.*'",
    "entrypoints==0.4 ; python_full_version == '3.10.*'",
    "exceptiongroup==1.2.2 ; python_full_version == '3.10.*'",
    "executing==0.8.3 ; python_full_version == '3.10.*'",
    "fer==22.2.0 ; python_full_version == '3.10.*'",
    "filelock==3.17.0 ; python_full_version == '3.10.*'",
    "flask==2.0.3 ; python_full_version == '3.10.*'",
    "flask-cors==5.0.0 ; python_full_version == '3.10.*'",
    "flatbuffers==1.12 ; python_full_version == '3.10.*'",
    "fonttools==4.29.1 ; python_full_version == '3.10.*'",
    "fsspec==2024.12.0 ; python_full_version == '3.10.*'",
    "gast==0.3.3 ; python_full_version == '3.10.*'",
    "google-auth==2.6.2 ; python_full_version == '3.10.*'",
    "google-auth-oauthlib==0.4.6 ; python_full_version == '3.10.*'",
    "google-pasta==0.2.0 ; python_full_version == '3.10.*'",
    "grpcio==1.70.0 ; python_full_version == '3.10.*'",
    "gunicorn==23.0.0 ; python_full_version == '3.10.*'",
    "h5py==3.12.1 ; python_full_version == '3.10.*'",
    "huggingface-hub==0.27.1 ; python_full_version == '3.10.*'",
    "idna==3.3 ; python_full_version == '3.10.*'",
    "imageio==2.16.1 ; python_full_version == '3.10.*'",
    "imageio-ffmpeg==0.4.5 ; python_full_version == '3.10.*'",
    "importlib-metadata==4.11.3 ; python_full_version == '3.10.*'",
    "iniconfig==2.0.0 ; python_full_version == '3.10.*'",
    "ipykernel==6.9.1 ; python_full_version == '3.10.*'",
    "ipython==8.1.1 ; python_full_version == '3.10.*'",
    "isort==5.10.1 ; python_full_version == '3.10.*'",
    "itsdangerous==2.1.0 ; python_full_version == '3.10.*'",
    "jedi==0.18.1 ; python_full_version == '3.10.*'",
    "jinja2==3.0.3 ; python_full_version == '3.10.*'",
    "joblib==1.1.0 ; python_full_version == '3.10.*'",
    "jupyter-client==7.1.2 ; python_full_version == '3.10.*'",
    "jupyter-core==4.9.2 ; python_full_version == '3.10.*'",
    "keras==2.8.0 ; python_full_version == '3.10.*'",
    "keras-preprocessing==1.1.2 ; python_full_version == '3.10.*'",
    "kiwisolver==1.3.2 ; python_full_version == '3.10.*'",
    "lazy-object-proxy==1.7.1 ; python_full_version == '3.10.*'",
    "libclang==13.0.0 ; python_full_version == '3.10.*'",
    "markdown==3.3.6 ; python_full_version == '3.10.*'",
    "markupsafe==2.1.0 ; python_full_version == '3.10.*'",
    "matplotlib==3.5.1 ; python_full_version == '3.10.*'",
    "matplotlib-inline==0.1.3 ; python_full_version == '3.10.*'",
    "mccabe==0.6.1 ; python_full_version == '3.10.*'",
    "moviepy==1.0.3 ; python_full_version == '3.10.*'",
    "mpmath==1.3.0 ; python_full_version == '3.10.*'",
    "mtcnn==0.1.1 ; python_full_version == '3.10.*'",
    "mutagen==1.47.0 ; python_full_version == '3.10.*'",
    "mypy-extensions==0.4.3 ; python_full_version == '3.10.*'",
    "nest-asyncio==1.5.4 ; python_full_version == '3.10.*'",
    "networkx==3.4.2 ; python_full_version == '3.10.*'",
    "nltk==3.7 ; python_full_version == '3.10.*'",
    "numpy==1.22.3 ; python_full_version == '3.10.*'",
    "nvidia-cublas-cu12==12.4.5.8 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.4.127 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.4.127 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.4.127 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.1.0.70 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.2.1.3 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.5.147 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.6.1.9 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.3.1.170 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.21.5 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.4.127 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.4.127 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "oauthlib==3.2.0 ; python_full_version == '3.10.*'",
    "opencv-contrib-python==4.11.0.86 ; python_full_version == '3.10.*'",
    "opencv-python==4.11.0.86 ; python_full_version == '3.10.*'",
    "opt-einsum==3.3.0 ; python_full_version == '3.10.*'",
    "packaging==24.2 ; python_full_version == '3.10.*'",
    "pandas>=2.2.3",
    "pandas==2.0.3 ; python_full_version == '3.10.*'",
    "parso==0.8.3 ; python_full_version == '3.10.*'",
    "pathspec==0.9.0 ; python_full_version == '3.10.*'",
    "pexpect==4.8.0 ; python_full_version == '3.10.*'",
    "pickleshare==0.7.5 ; python_full_version == '3.10.*'",
    "pillow==9.0.1 ; python_full_version == '3.10.*'",
    "platformdirs==2.5.1 ; python_full_version == '3.10.*'",
    "pluggy==1.5.0 ; python_full_version == '3.10.*'",
    "proglog==0.1.9 ; python_full_version == '3.10.*'",
    "prompt-toolkit==3.0.28 ; python_full_version == '3.10.*'",
    "protobuf==3.19.4 ; python_full_version == '3.10.*'",
    "psutil==6.1.1 ; python_full_version == '3.10.*'",
    "ptyprocess==0.7.0 ; python_full_version == '3.10.*'",
    "pure-eval==0.2.2 ; python_full_version == '3.10.*'",
    "py==1.11.0 ; python_full_version == '3.10.*' and implementation_name == 'pypy'",
    "pyasn1==0.4.8 ; python_full_version == '3.10.*'",
    "pyasn1-modules==0.2.8 ; python_full_version == '3.10.*'",
    "pycparser==2.22 ; python_full_version == '3.10.*' and implementation_name == 'pypy'",
    "pygments==2.11.2 ; python_full_version == '3.10.*'",
    "pylint==2.12.2 ; python_full_version == '3.10.*'",
    "pyparsing==3.0.7 ; python_full_version == '3.10.*'",
    "pytest==8.3.4 ; python_full_version == '3.10.*'",
    "python-dateutil==2.8.2 ; python_full_version == '3.10.*'",
    "python-dotenv==0.20.0 ; python_full_version == '3.10.*'",
    "pytz==2021.3 ; python_full_version == '3.10.*'",
    "pywin32==308 ; python_full_version == '3.10.*' and platform_python_implementation != 'PyPy' and sys_platform == 'win32'",
    "pyyaml==6.0.2 ; python_full_version == '3.10.*'",
    "pyzmq==22.3.0 ; python_full_version == '3.10.*'",
    "redis==5.2.1 ; python_full_version == '3.10.*'",
    "regex==2022.1.18 ; python_full_version == '3.10.*'",
    "requests==2.27.1 ; python_full_version == '3.10.*'",
    "requests-mock==1.12.1 ; python_full_version == '3.10.*'",
    "requests-oauthlib==1.3.1 ; python_full_version == '3.10.*'",
    "rq==2.1.0 ; python_full_version == '3.10.*'",
    "rsa==4.8 ; python_full_version == '3.10.*'",
    "safetensors==0.5.2 ; python_full_version == '3.10.*'",
    "scikit-learn==1.0.2 ; python_full_version == '3.10.*'",
    "scipy==1.8.0 ; python_full_version == '3.10.*'",
    "setuptools==75.8.0 ; python_full_version == '3.10.*'",
    "six==1.15.0 ; python_full_version == '3.10.*'",
    "stack-data==0.2.0 ; python_full_version == '3.10.*'",
    "sympy==1.13.1 ; python_full_version == '3.10.*'",
    "tensorboard==2.8.0 ; python_full_version == '3.10.*'",
    "tensorboard-data-server==0.6.1 ; python_full_version == '3.10.*'",
    "tensorboard-plugin-wit==1.8.1 ; python_full_version == '3.10.*'",
    "tensorflow==2.8.4 ; python_full_version == '3.10.*'",
    "tensorflow-estimator==2.8.0 ; python_full_version == '3.10.*'",
    "tensorflow-io-gcs-filesystem==0.37.1 ; python_full_version == '3.10.*'",
    "termcolor==2.5.0 ; python_full_version == '3.10.*'",
    "threadpoolctl==3.5.0 ; python_full_version == '3.10.*'",
    "tokenizers==0.15.2 ; python_full_version == '3.10.*'",
    "toml==0.10.2 ; python_full_version == '3.10.*'",
    "tomli==2.2.1 ; python_full_version == '3.10.*'",
    "torch==2.5.1 ; python_full_version == '3.10.*'",
    "tornado==6.4.2 ; python_full_version == '3.10.*'",
    "tqdm==4.67.1 ; python_full_version == '3.10.*'",
    "traitlets==5.14.3 ; python_full_version == '3.10.*'",
    "transformers==4.36.2 ; python_full_version == '3.10.*'",
    "triton==3.1.0 ; python_full_version == '3.10.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typing-extensions==4.12.2 ; python_full_version == '3.10.*'",
    "tzdata==2025.1 ; python_full_version == '3.10.*'",
    "urllib3==1.26.20 ; python_full_version == '3.10.*'",
    "wcwidth==0.2.13 ; python_full_version == '3.10.*'",
    "werkzeug==2.1.2 ; python_full_version == '3.10.*'",
    "wheel==0.45.1 ; python_full_version == '3.10.*'",
    "wrapt==1.13.3 ; python_full_version == '3.10.*'",
    "zipp==3.21.0 ; python_full_version == '3.10.*'",
    "nltk>=3.9.1",
    "requests>=2.32.3",
    "fer>=22.5.1",
    "moviepy==1.0.3",
    "tensorflow>=2.18.0",
    "transformers>=4.48.1",
    "scikit-learn>=1.6.1",
    "psutil>=6.1.1",
    "ffmpeg>=1.4",
    "python-ffmpeg>=2.0.12",
    "gunicorn>=23.0.0",
    "redis>=5.2.1",
    "rq>=2.1.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "uuid>=1.30",
    "pytest>=8.3.4",
    "requests-mock>=1.12.1",
    "tf-keras>=2.18.0",
    "python-dotenv>=1.0.1",
]
