[project]
name = "mlapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fer>=22.5.1",
    "opencv-contrib-python-headless>=4.11.0.86",
    "pytest>=8.3.4",
]

[dependency-groups]
dev = [
    "absl-py==2.1.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "assemblyai==0.37.0",
    "astunparse==1.6.3",
    "blinker==1.9.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cmudict==1.0.32",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "decorator==4.4.2",
    "facenet-pytorch==2.5.3",
    "fer==22.5.1",
    "ffmpeg==1.4",
    "filelock==3.17.0",
    "flask==3.1.0",
    "flask-cors==5.0.0",
    "flatbuffers==25.1.21",
    "fonttools==4.55.5",
    "fsspec==2024.12.0",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.70.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "h5py==3.12.1",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.27.1",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.5.2",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "keras==3.8.0",
    "kiwisolver==1.4.8",
    "language-tool-python==2.9.0",
    "libclang==18.1.1",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "mdurl==0.1.2",
    "ml-dtypes==0.4.1",
    "mlapi",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "namex==0.0.8",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.0.2",
    "nvidia-cublas-cu12==12.4.5.8 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.1.0.70 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.2.1.3 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.5.147 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.6.1.9 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.3.1.170 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.21.5 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "opencv-contrib-python==4.11.0.86",
    "opencv-contrib-python-headless==4.11.0.86",
    "opt-einsum==3.4.0",
    "optree==0.14.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "pluggy==1.5.0",
    "proglog==0.1.10",
    "protobuf==5.29.3",
    "psutil==6.1.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyee==12.1.1",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "pyphen==0.17.2",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-ffmpeg==2.0.12",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-mock==1.12.1",
    "rich==13.9.4",
    "rq==2.1.0",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "setuptools==75.8.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sympy==1.13.1",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.18.0",
    "tensorflow-cpu==2.18.0",
    "tensorflow-intel==2.18.0 ; sys_platform == 'win32'",
    "termcolor==2.5.0",
    "textstat==0.7.5",
    "tf-keras==2.18.0",
    "threadpoolctl==3.5.0",
    "tokenizers==0.21.0",
    "toml==0.10.2",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.1",
    "transformers==4.48.1",
    "triton==3.1.0 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "uuid==1.30",
    "websockets==13.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "zipp==3.21.0",
]

[tool.uv.sources]
mlapi = { workspace = true }
